<resources>
    <string name="app_name">MangaList</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Discover</string>
    <string name="title_notifications">Notifications</string>
    <string name="more">More</string>
    <string name="top_airing">Top 10  Airing Animes</string>
    <string name="score">Score</string>
    <string name="poster">Poster</string>
    <string name="top_upcoming">Upcoming</string>
    <string name="tv">TV</string>
    <string name="movie">Movie</string>
    <string name="ova">OVA</string>
    <string name="detail">Detail</string>
    <string name="backdrop_image">badrop image</string>
    <string name="text_read_more">Read More</string>
    <string name="title_cast">Characters</string>
    <string name="genres">Genre</string>
    <string name="play">Play</string>
    <string name="video">Trailers</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="search_hint">Search...</string>
    <string name="home_bottom_dialog_title">Top 10 Upcoming Animes</string>
    <string name="spring">Spring &#127793;</string>
    <string name="summer">Summer &#127774;</string>
    <string name="fall">Fall &#127810;</string>
    <string name="winter">Winter &#10052;</string>
    <string name="search">Search</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="view_all">View All</string>
    <string name="view_cast">Read More</string>
    <string name="day_night">Day/Night</string>
    <string name="info">Information</string>
</resources>