<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/img_discover"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            tools:src="@color/purple_500" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Anime Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/score"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_score"
            android:paddingHorizontal="8dp"
            android:text="9"
            android:textColor="@color/white"
            android:textSize="13sp"
            tools:text="8.7" />

    </LinearLayout>


</LinearLayout>