<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_detail"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:id="@+id/transformation_image"
            android:contentDescription="@string/backdrop_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="170dp"
            android:layout_height="240dp"
            android:layout_marginTop="32dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster"
                android:scaleType="centerCrop"
                tools:src="@color/purple_500" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/movie_detail_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintWidth_default="wrap">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:paddingLeft="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_large">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/arkhip_font"
                    android:maxLines="1"
                    android:text="Anime Title"
                    android:paddingTop="@dimen/margin_large"
                    android:paddingEnd="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_x_medium_large"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line_below_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginRight="@dimen/padding"
                    android:background="@color/detail_list_item_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/genre_title"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/genres"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line_below_title" />


                <HorizontalScrollView
                    android:id="@+id/hori_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:paddingHorizontal="16dp"
                    android:scrollbars="none"
                    app:layout_constraintTop_toBottomOf="@+id/genre_title">

                    <LinearLayout
                        android:id="@+id/list_genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessLeaf">

                    </LinearLayout>

                </HorizontalScrollView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movie_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:lineSpacingExtra="5dp"
                    android:text="Summary or Synopsis"
                    android:paddingTop="@dimen/margin"
                    android:paddingRight="@dimen/margin_xlarge"
                    android:paddingBottom="@dimen/margin_large"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small_medium"
                    app:layout_constraintTop_toBottomOf="@+id/hori_scroll" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_large"
                    android:fontFamily="@font/arkhip_font"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/margin"
                    android:text="Rumtime"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_desc" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/expand_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_large"
                    android:autoLink="all"
                    android:fontFamily="@font/arkhip_font"
                    android:gravity="right|center_vertical"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:text="@string/text_read_more"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_small"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/txt_runtime" />


                <include
                    android:id="@+id/included_layout"
                    layout="@layout/list_item_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expand_button" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>